# bike-availability-forecasting-system

./: .coverage  .env.example  .gitignore  COMMIT_CONVENTION.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml  ingest.yml
docs/analytics/: README.md  integrity_report_template.md
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_comparison.ipynb  04_advanced_models.ipynb
sql/: 001_create_tables.sql  002_create_indexes.sql  003_analytics_layer.sql  004_data_quality_views.sql  005_predictions_table.sql  006_anomalies_table.sql
src/anomaly/: detector.py
src/api/: main.py  routes.py  schemas.py
src/dashboard/: __init__.py  app.py  data.py
src/dashboard/views/: anomalies.py  availability.py  drift_monitor.py  heatmap.py  peak_hours.py  performance.py
src/dataset/: __main__.py  features.py  resampler.py  splitter.py
src/ingestion/: __main__.py  fetcher.py  loader.py  parser.py
src/model/: __main__.py  advanced.py  baseline.py  evaluate.py
src/monitoring/: __init__.py  __main__.py  drift.py  reporter.py  store.py
src/storage/: connection.py  data_quality.py  schema.py
tests/: test_advanced.py  test_anomaly.py  test_api.py  test_baseline.py  test_connection.py  test_dashboard.py  test_data_quality.py  test_drift.py  test_features.py  test_fetcher.py  test_loader.py  test_main.py  test_monitoring_main.py  test_parser.py  test_reporter.py  test_resampler.py  test_schema.py  test_splitter.py  test_store.py
