[project]
name = "bike-availability-forecasting-system"
version = "0.3.0"
description = "End-to-end data pipeline and ML system for forecasting bike availability in São Paulo's bike-sharing network."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Bruno" },
]
keywords = ["gbfs", "bike-sharing", "forecasting", "time-series", "data-engineering"]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "folium>=0.17.0",
]

[project.urls]
Repository = "https://github.com/<your-username>/bike-availability-forecasting-system"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
